# fleet-repo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.yml
airports_data/: init_airport_data.py
aviation_api/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
aviation_api/migrations/: 0001_initial.py  0002_alter_aircraft_managers_alter_aircraft_created_at.py  0003_alter_aircraft_created_at.py  0004_alter_aircraft_created_at.py  0005_alter_flights_id.py  0006_alter_flights_aircraft.py  0007_flights_created_at.py  0008_rename_manufacurer_aircraft_manufacturer_and_more.py  0009_alter_airports_code.py
aviation_api/tests/: test_aircraft.py  test_flights.py
core/: settings.py  urls.py
fixutres/: data.json
